Imrpove Selector to make more fine